--- a/SithAcademy/SithAcademy/Views/Academy/Lock.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Lock.cshtml
@@ -6,7 +6,7 @@
 <h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
-<form asp-controller="Academy" asp-action="Lock" method="post">
+<form asp-area="" asp-controller="Academy" asp-action="Lock" method="post">
     <div class="d-flex justify-content-center">
         <div class="card " style="width: 50rem;">
             <div class="card-body">
