--- a/SithAcademy/SithAcademy/Views/Home/Error404.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Error404.cshtml
@@ -12,7 +12,7 @@
                     <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*hFwwQAW45673VGKrMPE2qQ.png" alt="Alternative image" class="img-thumbnail">
                     <p>Incorrect URL entered. Page was not found.</p>
                 </div>
-                <div class="text-left h4">  Go back to <a asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
+                <div class="text-left h4">  Go back to <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
             </div>
         </div>
     </div>
