--- a/SithAcademy/SithAcademy/Views/Home/Error405.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Error405.cshtml
@@ -11,7 +11,7 @@
                 <div class="text-left h4">
                     <p>405 Not Allowed.</p>
                 </div>
-                <div class="text-left h4">  Go back to <a asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
+                <div class="text-left h4">  Go back to <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
             </div>
         </div>
     </div>
