--- a/SithAcademy/SithAcademy/Views/Location/Display.cshtml
+++ b/SithAcademy/SithAcademy/Views/Location/Display.cshtml
@@ -18,7 +18,7 @@
                         <img class="card-img-top" src="@location.ImageUrl" alt="Location Image">
                         <div class="card-body">
                             <h3 class="card-title">@location.Name</h3>
-                            <a asp-controller="Location" asp-action="Details" asp-route-id="@location.Id" class="btn btn-danger mb-2">Details</a>
+                            <a asp-area="" asp-controller="Location" asp-action="Details" asp-route-id="@location.Id" class="btn btn-danger mb-2">Details</a>
                         </div>
                     </div>
                 </div>
