--- a/SithAcademy/SithAcademy/Views/Academy/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Edit.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form asp-action="Edit">
+        <form asp-area="" asp-controller="Academy" asp-action="Edit">
             <div class="mb-3">
                 <label asp-for="Title" class="form-label">Title</label>
                 <input asp-for="Title" class="form-control" />
