--- a/SithAcademy/SithAcademy/Views/Home/Error.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Error.cshtml
@@ -5,4 +5,4 @@
 <h2 class="text-danger">The Dark Side has prevented your request from going through. Meditate upon your failure or try again later.</h2>
 <br />
 <br />
-<div class="text-left h4"> Go back to <a asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
+<div class="text-left h4"> Go back to <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> Home Page</div>
