--- a/SithAcademy/SithAcademy/Views/Home/Error401.cshtml
+++ b/SithAcademy/SithAcademy/Views/Home/Error401.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-10">
                 <img src="https://www.elegantthemes.com/blog/wp-content/uploads/2019/12/401-error-wordpress-featured-image.jpg" alt="Alternative image" class="img-thumbnail">
-                <div class="text-left h4"> Log in to your existing account or register. <a asp-controller="Home" asp-action="Index">Home</a>Return to Home Page</div>
+                <div class="text-left h4"> Log in to your existing account or register. <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>Return to Home Page</div>
             </div>
         </div>
     </div>
