--- a/SithAcademy/SithAcademy/Views/Homework/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form asp-action="Edit" method="post">
+        <form asp-area="" asp-controller="Homework" asp-action="Edit" method="post">
             <div class="mb-3">
                 <label asp-for="Content" class="form-label"></label>
                 <textarea asp-for="Content" class="form-control" rows="4"></textarea>
