--- a/SithAcademy/SithAcademy/Views/Homework/_HomeworkPartial.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/_HomeworkPartial.cshtml
@@ -9,7 +9,7 @@
             <h6>Score: @Model.HomeworkScore</h6>
             <h6>Score needed to pass: @Model.TrialScore</h6>
 
-            <a asp-controller="Homework" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">View Details</a>
+            <a asp-area="" asp-controller="Homework" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">View Details</a>
         </div>
     </div>
 </div>
