--- a/SithAcademy/SithAcademy/Views/Resource/Add.cshtml
+++ b/SithAcademy/SithAcademy/Views/Resource/Add.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-        <form method="post">
+        <form asp-area="" asp-controller="Resource" asp-action="Add" method="post">
             <div class="form-group">
                 <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control">
@@ -21,7 +21,7 @@
             <div class="form-group">
                 <label asp-for="TrialId"></label>
                 <select asp-for="TrialId" class="form-control">
-                    @foreach (var trial in Model.Trials)
+                    @foreach (TrialDropdownViewModel trial in Model.Trials)
                     {
                         <option value="@trial.Id">@trial.Title</option>
                     }
