--- a/SithAcademy/SithAcademy/Views/Trial/_TrialPartial.cshtml
+++ b/SithAcademy/SithAcademy/Views/Trial/_TrialPartial.cshtml
@@ -6,8 +6,8 @@
             <h4>@Model.Title</h4>
             <h6>(@(Model.IsLocked ? "Locked" : "Not locked"))</h6>
 
-            <a asp-controller="Trial" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">View Details</a>
-            <a asp-controller="Trial" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit Trial</a>
+            <a asp-area="" asp-controller="Trial" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">View Details</a>
+            <a asp-area="" asp-controller="Trial" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit Trial</a>
         </div>
     </div>
 </div>
