--- a/SithAcademy/SithAcademy/Areas/Admin/Views/Home/Index.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Admin/Views/Home/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Admin Page";
 }
 
 <div class="mt-4 p-5 bg-light text-center">
     <h2 class="display-4">Greetings, High Inquisitor!</h2>
     <p class="lead mb-1 mt-3">Below you will see the available options for adding new content for aspiring acolytes. From the section above you can navigate and modify existing content.</p>
+    <p class="lead mb-1 mt-3">You can modify academies from the Academies Panel.</p>
+    <p class="lead mb-1 mt-3">You can modify trials from the Trials Panel.</p>
+    <p class="lead mb-1 mt-3">You can access a trial's resources by selecting a trial's details, where you can then edit a resource (including soft delete and moving it to a different trial).</p>
+    <p class="lead mb-1 mt-3">You can view all submitted homeworks from the Homeworks Panel.</p>
     <hr class="my-4">
-    <a asp-area="" asp-controller="Trial" asp-action="Add"
-       class="btn btn-success btn-lg">Add Trial</a>
-    <a asp-area="" asp-controller="Resource" asp-action="Add"
-       class="btn btn-success btn-lg">Add Resource</a>
+    <a asp-area="Admin" asp-controller="Academy" asp-action="Add" class="btn btn-success btn-lg">Add Academy</a>
+    <a asp-area="" asp-controller="Trial" asp-action="Add" class="btn btn-success btn-lg">Add Trial</a>
+    <a asp-area="" asp-controller="Resource" asp-action="Add" class="btn btn-success btn-lg">Add Resource</a>
 </div>
