--- a/SithAcademy/SithAcademy/Views/Shared/_Layout.cshtml
+++ b/SithAcademy/SithAcademy/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                         @if(User.IsAdmin())
                         {
                             <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Academy" asp-action="Display">Academies Panel</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Trial" asp-action="All">Trials Panel</a>
                             </li>
                             <li class="nav-item">
