--- a/SithAcademy/SithAcademy/Areas/Admin/Views/Academy/Add.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Admin/Views/Academy/Add.cshtml
@@ -2,10 +2,10 @@
 @model AddAcademyViewModel
 
 @{
-    ViewBag.Title = "Add Academy";
+    ViewData["Title"] = "Add Academy";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <div class="row">
