--- a/SithAcademy/SithAcademy/Areas/Admin/Views/Home/Index.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Admin/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 <div class="mt-4 p-5 bg-light text-center">
     <h2 class="display-4">Greetings, High Inquisitor!</h2>
     <p class="lead mb-1 mt-3">Below you will see the available options for adding new content for aspiring acolytes. From the section above you can navigate and modify existing content.</p>
+    <p class="lead mb-1 mt-3">You can view and modify existing users from the Users Panel.</p>
     <p class="lead mb-1 mt-3">You can modify academies from the Academies Panel.</p>
     <p class="lead mb-1 mt-3">You can modify trials from the Trials Panel.</p>
     <p class="lead mb-1 mt-3">You can access a trial's resources by selecting a trial's details, where you can then edit a resource (including soft delete and moving it to a different trial).</p>
