--- a/SithAcademy/SithAcademy/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using SithAcademy.Web.ViewModels.Resource
 @using SithAcademy.Web.ViewModels.Homework
 @using SithAcademy.Web.ViewModels.Query
+@using SithAcademy.Web.Areas.Admin.ViewModels.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
