--- a/SithAcademy/SithAcademy/Views/Academy/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Details.cshtml
@@ -6,6 +6,8 @@
 @{
     string? userId = User.GetId();
     bool userIsOverseer = await OverseerService.UserIsOverseerAsync(userId);
+
+    ViewData["Title"] = @Model.Title;
 }
 
 <h2 class="text-center">@Model.Title</h2>
