--- a/SithAcademy/SithAcademy/Views/Academy/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Academy/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AcademyFormViewModel
 @{
-    ViewBag.Title = "Edit Academy";
+     ViewData["Title"] = "Edit Academy";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <h4 class="mb-3 text-center text-danger">Always consult with the High Inquisitor prior to modifying an academy's details.</h4>
