--- a/SithAcademy/SithAcademy/Views/Homework/All.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/All.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AllHomeworksQueryModel
 @{
-    ViewBag.Title = "All Homeworks";
+    ViewData["Title"] = "All Homeworks";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <form method="get">
