--- a/SithAcademy/SithAcademy/Views/Location/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Location/Details.cshtml
@@ -1,5 +1,9 @@
 ﻿@model LocationDetailsViewModel
 
+@{
+    ViewData["Title"] = @Model.Name;
+}
+
 <h2 class="text-center">@Model.Name</h2>
 <hr />
 
