--- a/SithAcademy/SithAcademy/Views/Trial/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Trial/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model TrialFormViewModel
 
 @{
-    ViewBag.Title = "Edit Trial Details";
+    ViewData["Title"] = "Edit Trial Details";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <h4 class="mb-3 text-center text-danger">Always consult with the High Inquisitor prior to modifying a trial's details.</h4>
