--- a/SithAcademy/SithAcademy/Views/Homework/Submit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/Submit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SubmitHomeworkViewModel
 
 @{
-    ViewBag.Title = $"Submit Homework to {Model.TrialInfo!.Title}";
+    ViewData["Title"] = $"Submit Homework to {Model.TrialInfo!.Title}";
 }
 
-<h3 class="text-center text-danger">@ViewBag.Title</h3>
+<h3 class="text-center text-danger">@ViewData["Title"]</h3>
 <h5 class="text-start">@Model.TrialInfo.Description</h5>
 <p class="text-center text-primary">(If you need help you can always consult with a trial's resources.)</p>
 <hr />
