--- a/SithAcademy/SithAcademy/Views/Resource/Add.cshtml
+++ b/SithAcademy/SithAcademy/Views/Resource/Add.cshtml
@@ -1,5 +1,12 @@
 ﻿@model ResourceFormViewModel
 
+@{
+    ViewData["Title"] = "Add Resource";
+}
+
+<h2 class="text-center">@ViewData["Title"]</h2>
+<hr />
+
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <form asp-area="" asp-controller="Resource" asp-action="Add" method="post">
