--- a/SithAcademy/SithAcademy/Views/Resource/Edit.cshtml
+++ b/SithAcademy/SithAcademy/Views/Resource/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ResourceFormViewModel
 @{
-    ViewBag.Title = "Edit Resource Details";
+    ViewData["Title"] = "Edit Resource Details";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <h4 class="mb-3 text-center text-danger">Always consult with the High Inquisitor prior to modifying a resource's details.</h4>
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <label asp-for="TrialId"></label>
                 <select asp-for="TrialId" class="form-control">
-                    @foreach (var trial in Model.Trials)
+                    @foreach (TrialDropdownViewModel trial in Model.Trials)
                     {
                         <option value="@trial.Id">@trial.Title</option>
                     }
