--- a/SithAcademy/SithAcademy/Views/Trial/Add.cshtml
+++ b/SithAcademy/SithAcademy/Views/Trial/Add.cshtml
@@ -2,12 +2,12 @@
 @model TrialFormViewModel
 
 @{
-    ViewBag.Title = "Add Trial";
+    ViewData["Title"] = "Add Trial";
 
     bool userIsAdmin = User.IsAdmin();
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <p class="text-center">Adding a trial will automatically add it to the in progress trials of every acolyte in the academy.</p>
 <hr />
 
