--- a/SithAcademy/SithAcademy/Views/Trial/All.cshtml
+++ b/SithAcademy/SithAcademy/Views/Trial/All.cshtml
@@ -1,9 +1,9 @@
 ﻿@model AllTrialsQueryModel
 @{
-    ViewBag.Title = "All Trials";
+    ViewData["Title"] = "All Trials";
 }
 
-<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <form method="get">
