--- a/SithAcademy/SithAcademy/Views/Location/Display.cshtml
+++ b/SithAcademy/SithAcademy/Views/Location/Display.cshtml
@@ -1,13 +1,27 @@
-﻿@model IEnumerable<LocationOverviewViewModel>
+﻿@using SithAcademy.Web.Infrastructure.Extensions;
+@model IEnumerable<LocationOverviewViewModel>
 @{
-    ViewData["Title"] = "Our Locations";
+    bool userIsAdmin = User.IsAdmin(); 
+    
+    if (userIsAdmin)
+    {
+        ViewData["Title"] = "Locations Panel";
+    }
+    else
+    {
+        ViewData["Title"] = "Our Locations";
+    }
+
     LocationOverviewViewModel[] locations = Model.ToArray();
 }
 
 <div class="container text-center">
     <div class="row">
-        <p>Many worlds are under the control of the Sith. Perhaps one day you shall add more of them to this number...</p>
-
+        @if (!userIsAdmin)
+        {
+            <p>Many worlds are under the control of the Sith. Perhaps one day you shall add more of them to this number...</p>
+        }
+        
         @for (int i = 0; i < locations.Length; i++)
         {
             LocationOverviewViewModel location = locations[i];
@@ -18,7 +32,12 @@
                         <img class="card-img-top" src="@location.ImageUrl" alt="Location Image">
                         <div class="card-body">
                             <h3 class="card-title">@location.Name</h3>
-                            <a asp-area="" asp-controller="Location" asp-action="Details" asp-route-id="@location.Id" class="btn btn-danger mb-2">Details</a>
+                            <a asp-area="" asp-controller="Location" asp-action="Details" asp-route-id="@location.Id" class="btn btn-success mb-2">Details</a>
+                            @if (userIsAdmin)
+                            {
+                                <a asp-area="Admin" asp-controller="Location" asp-action="Edit" asp-route-id="@location.Id" class="btn btn-warning mb-2">Edit</a>
+                                <a asp-area="Admin" asp-controller="Location" asp-action="Lock" asp-route-id="@location.Id" class="btn btn-danger mb-2">Lock</a>
+                            }
                         </div>
                     </div>
                 </div>
