--- a/SithAcademy/SithAcademy/Views/Location/Details.cshtml
+++ b/SithAcademy/SithAcademy/Views/Location/Details.cshtml
@@ -6,7 +6,7 @@
     bool userIsAdmin = User.IsAdmin();
 }
 
-<h2 class="text-center">@Model.Name</h2>
+<h2 class="text-center">@ViewData["Title"]</h2>
 <hr />
 
 <div class="d-flex justify-content-center">
@@ -19,36 +19,40 @@
             <p class="card-text">@Model.Description</p>
             <p class="card-text">Below you will find our facilities on this world.</p>
             <span></span>
-            @if (!Model.IsLocked)
+
+            @if (userIsAdmin)
             {
+                string lockButtonText = "Lock location";
+                string lockButtonClass = "btn-danger";
+                if (Model.IsLocked)
+                {
+                    <p class="text-center text-danger">Location has been locked. Every academy in the location has been locked as well.</p>
+                    lockButtonText = "Unlock location";
+                    lockButtonClass = "btn-primary";
+                }
+
+                <a asp-area="Admin" asp-controller="Location" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning mb-2">Edit location</a>
+                <a asp-area="Admin" asp-controller="Location" asp-action="Lock" asp-route-id="@Model.Id" class="btn @lockButtonClass mb-2">@lockButtonText</a>
+
                 foreach (AcademySummaryViewModel academy in Model.Academies)
                 {
                     <h3 class="card-text">@academy.Title</h3>
                     <a asp-area="" asp-controller="Academy" asp-action="Details" asp-route-id="@academy.Id" class="btn btn-success mb-2">Academy Details</a>
                 }
-
-                <p></p>
-                <a asp-area="Admin" asp-controller="Location" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning mb-2">Edit location</a>
-                <a asp-area="Admin" asp-controller="Location" asp-action="Lock" asp-route-id="@Model.Id" class="btn btn-danger mb-2">Lock location</a>
             }
             else
             {
-                @if (userIsAdmin)
+                if (Model.IsLocked)
                 {
-                    <p class="text-center text-danger">Location has been locked. Every academy in the location has been locked as well.</p>
-
-                    foreach (AcademySummaryViewModel academy in Model.Academies)
-                    {
-                        <h3 class="card-text">@academy.Title</h3>
-                        <a asp-area="" asp-controller="Academy" asp-action="Details" asp-route-id="@academy.Id" class="btn btn-danger mb-2">Academy Details</a>
-                    }
-
-                    <a asp-area="Admin" asp-controller="Location" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning mb-2">Edit location</a>
-                    <a asp-area="Admin" asp-controller="Location" asp-action="Lock" asp-route-id="@Model.Id" class="btn btn-primary mb-2">Unlock location</a>
+                    <h2 class="text-center text-danger bg-dark">[+++THIS LOCATION HAS BEEN PLACED ON LOCKDOWN. AWAIT FURTHER DEVELOPMENTS+++]</h2>
                 }
                 else
                 {
-                    <h2 class="text-center text-danger bg-dark">[+++THIS LOCATION HAS BEEN PLACED ON LOCKDOWN. AWAIT FURTHER DEVELOPMENTS+++]</h2>
+                    foreach (AcademySummaryViewModel academy in Model.Academies)
+                    {
+                        <h3 class="card-text">@academy.Title</h3>
+                        <a asp-area="" asp-controller="Academy" asp-action="Details" asp-route-id="@academy.Id" class="btn btn-success mb-2">Academy Details</a>
+                    }
                 }
             }
         </div>
