--- a/SithAcademy/SithAcademy/Views/Homework/All.cshtml
+++ b/SithAcademy/SithAcademy/Views/Homework/All.cshtml
@@ -70,7 +70,6 @@
 <div class="row mb-5">
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
-           asp-area=""
            asp-controller="Homework"
            asp-action="All"
            asp-route-currentPage="@previousPage"
@@ -81,13 +80,12 @@
 
     @{
         bool shouldNextPageBeDisabled = Model.CurrentPage == maxPage ||
-        !Model.Trials.Any();
+        !Model.Homeworks.Any();
     }
 
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
         <a class="btn btn-primary
            @(shouldNextPageBeDisabled ? "disabled" : string.Empty)"
-           asp-area=""
            asp-controller="Homework"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
