--- a/SithAcademy/SithAcademy/Areas/Admin/Views/Academy/Add.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Admin/Views/Academy/Add.cshtml
@@ -1,5 +1,4 @@
-﻿@using SithAcademy.Web.Views.Location;
-@model AddAcademyViewModel
+﻿@model AddAcademyViewModel
 
 @{
     ViewData["Title"] = "Add Academy";
