--- a/SithAcademy/SithAcademy/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SithAcademy/SithAcademy/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,11 +1,5 @@
-﻿@using SithAcademy.Web
-@using SithAcademy.Data.Models
-@using SithAcademy.Web.ViewModels
-@using SithAcademy.Web.ViewModels.Trial
+﻿@using SithAcademy.Web.Views.Location;
 @using SithAcademy.Web.ViewModels.Academy
 @using SithAcademy.Web.ViewModels.Location
-@using SithAcademy.Web.ViewModels.Resource
-@using SithAcademy.Web.ViewModels.Homework
-@using SithAcademy.Web.ViewModels.Query
 @using SithAcademy.Web.Areas.Admin.ViewModels.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
